server/compilers/goLiteJS/src/test/ml2/valid/print2.go
// print and println of base types
package main

var n int = 23
var x float64 = 23.0
var p bool = true
var a rune = 'a'
var s string = "asdf"

func main() {
    print(n, x, p, a, s)
    println(n, x, p, a, s)
}
