server/compilers/goLiteJS/src/test/ml2/invalid/decl2.go
// variable assigned before declared
package main

func main() {
    a = 23
    var a int
}
